# giflib-5.2.1-windows

./: CMakeLists.txt  README  gif_font.c  giflib.def
